<resources>
    <string name="app_name">Parking App</string>
    <!-- Common -->
    <string name="numFields_maxLength">8</string>

    <string name="success_dialog_ok_text">OK</string>
    <string name="error_dialog_got_it_text">GOT IT</string>
    <string name="error_others_title">Error</string>
    <string name="error_others_msg">There was an error. Please try again.</string>
    <string name="error_incomplete_field_title">Missing Fields</string>
    <string name="error_incomplete_field_msg">There are some missing fields.</string>

    <string name="error_invalidSpot_title">Invalid Spot Number</string>
    <string name="error_spotNumberIsZero_msg">Parking number must be greater than zero.</string>

    <!-- Home Screen -->
    <string name="home_title">Parking Reservation App</string>
    <string name="home_settings_button">Settings</string>
    <string name="home_reservations_button">Make a reservation</string>
    <string name="home_release_button">Release a spot</string>

    <!-- Settings Screen -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_parking_size">Parking Lot Size</string>
    <string name="settings_current_size">Current size: %1$s</string>
    <string name="save_button_text">SAVE</string>

    <string name="settings_success_msg">Your settings were successfully saved.</string>

    <string name="error_settings_sizeIsZero_title">Invalid Size</string>
    <string name="error_settings_sizeIsZero_msg">Size must be greater than zero.</string>

    <!-- Reservation Screen -->
    <string name="reservation_activity_title">Parking Spot Reservation</string>
    <string name="reservation_start_date">Start Date</string>
    <string name="reservation_start_time">Start Time</string>
    <string name="reservation_end_date">End Date</string>
    <string name="reservation_end_time">End Time</string>
    <string name="reservation_parking_spot_number">Parking Spot</string>
    <string name="reservation_parking_lot_size_helper">Parking lot size: %1$s</string>
    <string name="reservation_security_code">Security Code</string>
    <string name="reservation_submit_res">Submit</string>

    <string name="error_reservation_invalidDate_title">Invalid Dates</string>
    <string name="error_reservation_unorderedDates_msg">End date must be greater than start date.</string>
    <string name="error_reservation_pastDates_msg">Both start and end dates must be future.</string>
    <string name="error_reservation_unavailableSpot_msg">The selected parking spot is not available in the selected date range. Please consider choosing another one.</string>
    <string name="error_reservation_outOfRangeSpot_msg"> Parking number must be lesser than the parking lot size.</string>
    <string name="error_size_not_set_msg">Could not retrieve the parking lot size. Please be sure it is set and then retry.</string>

    <string name="reservation_success_title">Reservation confirmed</string>
    <string name="reservation_success_msg">Your reservation was successfully appointed.</string>
    <string name="date_picker_tag">Date Picker</string>
    <string name="time_picker_tag">Time Picker</string>

    <!-- Release Screen -->
    <string name="release_activity_title">Parking Spot Release</string>
    <string name="release_parking_spot">Parking Spot</string>
    <string name="release_security_code">Security Code</string>
    <string name="release_delete_button">Release</string>

    <string name="error_release_reservationNotFound_title">Reservation not found</string>
    <string name="error_release_reservationNotFound_msg">No reservation was found with given spot number and security code.</string>
    <string name="error_release_outOfRangeSpot_msg">Parking spot does not exist.</string>

    <string name="release_confirmation_title">Releasing confirmation</string>
    <string name="release_confirmation_msg">Are you sure you want to release this spot? This action cannot be undone.</string>
    <string name="release_confirmation_yes">Yes</string>
    <string name="release_confirmation_no">No</string>

    <string name="release_success_title">Spot release confirmed</string>
    <string name="release_success_msg">The spot was successfully released.</string>

</resources>
