<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/std_margin"
    android:focusableInTouchMode="true"
    tools:context=".activity.ReleaseActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/std_margin"
        android:text="@string/release_activity_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_parking_number"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/release_parking_spot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toTopOf="@id/til_security_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_parking_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@string/numFields_maxLength" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_security_code"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/release_security_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_parking_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_security_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@string/numFields_maxLength" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/std_margin"
        android:text="@string/release_delete_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_security_code" />

</androidx.constraintlayout.widget.ConstraintLayout>
