<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reservation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/std_margin"
    android:focusableInTouchMode="true"
    tools:context=".activity.ReservationActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/std_margin"
        android:text="@string/reservation_activity_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStartDate"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/std_margin"
        android:hint="@string/reservation_start_date"
        app:layout_constraintEnd_toStartOf="@id/tilStartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStartTime"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_start_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tilStartDate"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEndDate"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/std_margin"
        android:hint="@string/reservation_end_date"
        app:layout_constraintEnd_toStartOf="@id/tilEndTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilStartDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEndTime"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tilEndDate"
        app:layout_constraintTop_toBottomOf="@id/tilStartTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilParkingLot"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_parking_spot_number"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEndDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etParkingLot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@string/numFields_maxLength" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSecurityCode"
        style="@style/TextInputLayoutTheme"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_security_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilParkingLot">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecurityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@string/numFields_maxLength"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/std_margin"
        android:text="@string/save_button_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSecurityCode" />

</androidx.constraintlayout.widget.ConstraintLayout>
