<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/std_margin"
    tools:context=".activity.HomeActivity">

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_a200"
        android:text="@string/home_settings_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnReservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_margin"
        android:layout_marginBottom="@dimen/std_margin"
        android:text="@string/home_reservations_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnRelease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSettings" />

    <Button
        android:id="@+id/btnRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_release_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReservation" />


</androidx.constraintlayout.widget.ConstraintLayout>
